--- a/Customers.html
+++ b/Customers.html
@@ -1,64 +1,2 @@
-{"details":[{"Custname":"Charlie"
-                            ,"Surname":"ABC"
-                            ,"Regno":"YK02 KM7"
-                            ,"Postcode"BH8 8RR"
-                            ,"PolicyNo":"EK222"
-                            ,"Product":"Motor"
-                            ,"Branch":"AVIVA"
-                            ,"Channel":"Aggregator"
-                            ,"Date":"29/06/2019"}
-                            ,{"Custname":"Colin"
-                            ,"Surname":"DEF"
-                            ,"Regno":"YK03 KM7"
-                            ,"Postcode"BH9 8RR"
-                            ,"PolicyNo":"EK223"
-                            ,"Product":"Motor"
-                            ,"Branch":"DIRECT"
-                            ,"Channel":"Aggregator"
-                            ,"Date":"19/06/2019"}
-                            ,{"Custname":"David"
-                              ,"Surname":"GHI"
-                            ,"Regno":"YK04 KM7"
-                            ,"Postcode"BH0 8RR"
-                            ,"PolicyNo":"EK224"
-                            ,"Product":"Home"
-                            ,"Branch":"Churchill"
-                            ,"Channel":"Phone"
-                            ,"Date":"19/06/2019"}
-                            ,{"Custname":"Leo"
-                              ,"Surname":"JKL"
-                            ,"Regno":"YK05 KM7"
-                            ,"Postcode"BH1 8RR"
-                            ,"PolicyNo":"EK225"
-                            ,"Product":"Home"
-                            ,"Branch":"Churchill"
-                            ,"Channel":"Aggregator"
-                            ,"Date":"10/06/2019"}
-                             ,{"Custname":"Sean"
-                              ,"Surname":"MNO"
-                            ,"Regno":"YK06 KM7"
-                            ,"Postcode"BH2 8RR"
-                            ,"PolicyNo":"EK226"
-                            ,"Product":"Home"
-                            ,"Branch":"Churchill"
-                            ,"Channel":"Web"
-                            ,"Date":"15/06/2019"}
-                            ,{"Custname":"Tom"
-                              ,"Surname":"PQR"
-                            ,"Regno":"YK07 KM7"
-                            ,"Postcode"BH3 8RR"
-                            ,"PolicyNo":"EK227"
-                            ,"Product":"Motor"
-                            ,"Branch":"DIRECT"
-                            ,"Channel":"Aggreagtor"
-                            ,"Date":"05/06/2019"}
-                            ,{"Custname":"Pate"
-                              ,"Surname":"STU"
-                            ,"Regno":"YK08 KM7"
-                            ,"Postcode"BH4 8RR"
-                            ,"PolicyNo":"EK228"
-                            ,"Product":"Motor"
-                            ,"Branch":"DIRECT"
-                            ,"Channel":"Aggreagtor"
-                            ,"Date":"25/06/2019"}
+{"details":[{"Custname":"Charlie","Surname":"ABC","Regno":"YK02 KM7","Postcode"BH8 8RR","PolicyNo":"EK222","Product":"Motor","Branch":"AVIVA","Channel":"Aggregator","Date":"29/06/2019"},{"Custname":"Colin","Surname":"DEF","Regno":"YK03 KM7","Postcode"BH9 8RR","PolicyNo":"EK223","Product":"Motor","Branch":"DIRECT","Channel":"Aggregator","Date":"19/06/2019"},{"Custname":"David","Surname":"GHI","Regno":"YK04 KM7","Postcode"BH0 8RR","PolicyNo":"EK224","Product":"Home","Branch":"Churchill","Channel":"Phone","Date":"19/06/2019"},{"Custname":"Leo","Surname":"JKL","Regno":"YK05 KM7","Postcode"BH1 8RR","PolicyNo":"EK225","Product":"Home","Branch":"Churchill","Channel":"Aggregator","Date":"10/06/2019"},{"Custname":"Sean","Surname":"MNO","Regno":"YK06 KM7","Postcode"BH2 8RR","PolicyNo":"EK226","Product":"Home","Branch":"Churchill","Channel":"Web","Date":"15/06/2019"},{"Custname":"Tom","Surname":"PQR","Regno":"YK07 KM7","Postcode"BH3 8RR","PolicyNo":"EK227","Product":"Motor","Branch":"DIRECT","Channel":"Aggreagtor","Date":"05/06/2019"},{"Custname":"Pate","Surname":"STU","Regno":"YK08 KM7","Postcode"BH4 8RR","PolicyNo":"EK228","Product":"Motor","Branch":"DIRECT","Channel":"Aggreagtor","Date":"25/06/2019"}
 ]}
